# TP

./: .travis.yml
Devops3/: .gitignore
Devops3/Decorator/: config.ini  description  script
Devops3/Raspberry_PI/: script
Factory/: BattleField.cpp  BattleField.h  CMakeLists.txt  Command.cpp  Command.h  ConsoleLogger.h  Decorator.cpp  Decorator.h  DoubleHealthUnitDecorator.cpp  DoubleHealthUnitDecorator.h  Exceptions.h  FileLogger.h  Game.cpp  Game.h  HeroBase.cpp  HeroGenerator.cpp  HeroGenerator.h  Logger.cpp  Logger.h  README.md  SimpleStrategy.cpp  SimpleStrategy.h  Squad.cpp  Squad.h  Strategy.h  Strategy1.cpp  Unit.h  UnitBase.cpp  UnitBase.h  UnitDecorator.cpp  UnitDecorator.h  UnitFactory.h  UnitInfo.cpp  game  main.cpp
Factory/Dungeon/: BloodMaiden.cpp  BloodMaiden.h  DarkRaiden.cpp  DarkRaiden.h  DungeonFactory.cpp  DungeonFactory.h  Hydra.cpp  Hydra.h  Minotaur.cpp  Minotaur.h  Scout.cpp  Scout.h  ShadowDragon.cpp  ShadowDragon.h  ShadowWitch.cpp  ShadowWitch.h  YlayaHero.h  YlayaSingleton.h
Factory/Heaven/: Angel.cpp  Angel.h  Archer.cpp  Archer.h  Cavalier.cpp  Cavalier.h  DuncanSingleton.h  Footman.cpp  Footman.h  Griffin.cpp  Griffin.h  HeavenFactory.cpp  HeavenFactory.h  Peasant.cpp  Peasant.h  Priest.cpp  Priest.h
Factory/Test/: test1.cpp  test2.cpp
Factory/headers/: ConsoleLogger.h  Direction.h  DoubleHealthUnitDecorator.h  Exceptions.h  Hero.h  HeroBase.h  HeroGenerator.h  Logger.h  Position.h  SimpleStrategy.h  Squad.h  Strategy.h  Strategy1.h  Unit.h  UnitBase.h  UnitFactory.h  UnitInfo.h
Factory/sources/: BattleField.cpp  DoubleHealthUnitDecorator.cpp  HeroGenerator.cpp  SimpleStrategy.cpp  Squad.cpp  Strategy1.cpp  UnitBase.cpp
Task2/: CMakeLists.txt
Task2/A/: preparing.py
Task2/B/: CMakeLists.txt  lib.cpp  lib.h
Task2/C/: main.cpp
